--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
-<title>HTML5 Speedtest</title>
+<title>Speedtest</title>
 <style type="text/css">
 	html,body{
 		border:none; padding:0; margin:0;
@@ -290,13 +290,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 <script type="text/javascript" charset="UTF-8" src="https://api.isoyu.com/js/v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
-
-            <a href="https://isoyu.com/sitemap/" target="_blank">SiteMap</a>
-            <a href="https://isoyu.com/spider.html" target="_blank">INSObot</a>
-            <a href="https://api.isoyu.com/" target="_blank">Docker Api</a>
-			<a href="https://isoyu.com/about/Index1.html" target="_blank">Privacy<!-- (en - en_gb - object) --></a>
-			<a href="https://isoyu.com/about/Index20.html" target="_blank">About</a>
-			<a href="https://t.me/INS_O" target="_blank">F.A.Q.</a>
+			<a href="https://www.lfx1848.cc" target="_blank">F.A.Q.</a>
 		    <a href="javascript:;">© 2007-2019 isoyu.com. All Rights Reserved.</a>
 </div>
 <script type="text/javascript">setTimeout(initUI,100);</script>
